--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <a href="#kaushalx">KaushalX</a>
             <a href="#values">Values</a>
             <a href="#contact">Contact</a>
+            <a href="#early access">Early Access</a>
         </div>
 
         <div class="nav-cta-group">
@@ -172,4 +173,5 @@
       feather.replace()
     </script>
 </body>
+
 </html>
