--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="#kaushalx">KaushalX</a>
             <a href="#values">Values</a>
             <a href="#contact">Contact</a>
-            <a href="#early access">Early Access</a>
+            <a href="#signup">Early Access</a>
         </div>
 
         <div class="nav-cta-group">
@@ -175,3 +175,4 @@
 </body>
 
 </html>
+
