privacy policy.html

--- a/privacy policy.html
+++ b/privacy policy.html
@@ -23,6 +23,7 @@
                 <a href="index.html#values">Values</a>
                 <a href="community.html">Community</a>
                 <a href="index.html#contact">Contact</a>
+                <a href="index.html#signup">Early Access</a>
             </div>
             <div class="nav-cta-group">
                 <a href="community.html" class="cta-button nav-cta community-cta">Join Community</a>
@@ -111,4 +112,5 @@
       feather.replace()
     </script>
 </body>
+
 </html>
