--- a/community.html
+++ b/community.html
@@ -21,6 +21,7 @@
                 <a href="index.html#kaushalx">KaushalX</a>
                 <a href="index.html#values">Values</a>
                 <a href="index.html#contact">Contact</a>
+                <a href="index.html#signup">Early Access</a>
             </div>
             <div class="nav-cta-group">
               
@@ -93,4 +94,5 @@
       feather.replace()
     </script>
 </body>
+
 </html>
