--- a/terms.html
+++ b/terms.html
@@ -24,6 +24,7 @@
                 <a href="index.html#values">Values</a>
                 <a href="community.html">Community</a>
                 <a href="index.html#contact">Contact</a>
+                <a href="index.html#signup">Early Access</a>
             </div>
             <div class="nav-cta-group">
                 <a href="community.html" class="cta-button nav-cta community-cta">Join Community</a>
@@ -109,4 +110,5 @@
       feather.replace()
     </script>
 </body>
+
 </html>
