--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <nav id="main-nav">
     <div class="nav-container">
-        <a href="#" class="logo-link">
+        <a href="devyug.com" class="logo-link">
             <span class="logo-text">Dev Yug</span>
         </a>
         <div class="nav-links">
@@ -175,4 +175,5 @@
 </body>
 
 </html>
+
 
