privacy policy.html

--- a/privacy policy.html
+++ b/privacy policy.html
@@ -14,7 +14,7 @@
 
     <nav id="main-nav" class="scrolled">
         <div class="nav-container">
-            <a href="index.html" class="logo-link">
+            <a href="devyug.com" class="logo-link">
                 <span class="logo-text">Dev Yug</span>
             </a>
             <div class="nav-links">
@@ -114,3 +114,4 @@
 </body>
 
 </html>
+
