--- a/terms.html
+++ b/terms.html
@@ -14,7 +14,7 @@
 
     <nav id="main-nav" class="scrolled">
         <div class="nav-container">
-            <a href="index.html" class="logo-link">
+            <a href="devyug.com" class="logo-link">
                 
                 <span class="logo-text">Dev Yug</span>
             </a>
@@ -112,3 +112,4 @@
 </body>
 
 </html>
+
