--- a/community.html
+++ b/community.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/feather-icons"></script>
+    <link rel="icon" href="favicon.png" type="image/x-icon">
 </head>
 <body class="subpage-body">
 
@@ -37,7 +38,7 @@
         <section id="community" class="content-section standalone-section">
             <h2 class="section-title reveal active">Join the Dev Yug Community.</h2>
             <p class="section-body reveal active">Become the community member. Connect with peers, find mentors, and get access to exclusive workshops and events before anyone else.</p>
-            <form id="community-form" action="https://formspree.io/f/YOUR_COMMUNITY_FORM_ID" method="POST" class="community-form reveal active">
+            <form id="community-form" action="https://formspree.io/f/myznwnpp" method="POST" class="community-form reveal active">
                 <div class="form-group">
                     <label for="name">Full Name</label>
                     <input type="text" id="name" name="name" required>
