--- a/community.html
+++ b/community.html
@@ -14,7 +14,7 @@
 <body class="subpage-body">
 
     <nav id="main-nav" class="scrolled"> <div class="nav-container">
-                        <a href="devyug.com" class="logo-link">
+                        <a href="index.html" class="logo-link">
             <span class="logo-text">Dev Yug</span>
             </a>
             <div class="nav-links">
@@ -97,4 +97,5 @@
 </body>
 
 </html>
+
 
