--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <nav id="main-nav">
     <div class="nav-container">
-        <a href="devyug.com" class="logo-link">
+        <a href="index.html" class="logo-link">
             <span class="logo-text">Dev Yug</span>
         </a>
         <div class="nav-links">
@@ -176,5 +176,6 @@
 </body>
 
 </html>
+
 
 
