--- a/privacy policy.html
+++ b/privacy policy.html
@@ -15,7 +15,7 @@
 
     <nav id="main-nav" class="scrolled">
         <div class="nav-container">
-            <a href="devyug.com" class="logo-link">
+            <a href="index.html" class="logo-link">
                 <span class="logo-text">Dev Yug</span>
             </a>
             <div class="nav-links">
@@ -115,4 +115,5 @@
 </body>
 
 </html>
+
 
