--- a/terms.html
+++ b/terms.html
@@ -15,8 +15,7 @@
 
     <nav id="main-nav" class="scrolled">
         <div class="nav-container">
-            <a href="devyug.com" class="logo-link">
-                
+            <a href="index.html" class="logo-link">                
                 <span class="logo-text">Dev Yug</span>
             </a>
             <div class="nav-links">
@@ -113,4 +112,5 @@
 </body>
 
 </html>
+
 
