--- a/community.html
+++ b/community.html
@@ -48,6 +48,10 @@
                     <input type="email" id="community-email" name="email" required>
                 </div>
                 <div class="form-group">
+                    <label for="linkedin-link">LinkedIn Link</label>
+                    <input type="link" id="linkedin-link" name="link" required>
+                </div>
+                <div class="form-group">
                     <label for="role">I am a...</label>
                     <select id="role" name="role" required>
                         <option value="" disabled selected>Select your role</option>
