--- a/community.html
+++ b/community.html
@@ -83,7 +83,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>© 2025 Dev Yug Pvt. Ltd. • All Rights Reserved. • <a href="privacy policy.html">Privacy Policy</a> • <a href="terms.html">Terms of Service</a></p>
+            <p>© 2025 Dev Yug Enterprises. • All Rights Reserved. • <a href="privacy policy.html">Privacy Policy</a> • <a href="terms.html">Terms of Service</a></p>
         </div>
     </footer>
 
