update social media links in footer across multiple pages

--- a/community.html
+++ b/community.html
@@ -78,7 +78,7 @@
                 <div>
                     <a href="https://www.linkedin.com/company/dev-yug"><i data-feather="linkedin"></i></a>
                     <a href="https://www.instagram.com/wearedevyug"><i data-feather="instagram"></i></a>
-                    <a href="devyug.com"><i data-feather="web"></i></a>
+                    <a href="devyug.com"><i data-feather="website"></i></a>
                 </div>
             </div>
         </div>
