--- a/terms.html
+++ b/terms.html
@@ -94,9 +94,9 @@
             <div class="footer-social">
                 <h4>Connect</h4>
                 <div>
-                    <a href="#"><i data-feather="linkedin"></i></a>
-                    <a href="#"><i data-feather="github"></i></a>
-                    <a href="#"><i data-feather="twitter"></i></a>
+                    <a href="https://www.linkedin.com/company/dev-yug"><i data-feather="linkedin"></i></a>
+                    <a href="https://www.instagram.com/wearedevyug"><i data-feather="instagram"></i></a>
+                    <a href="devyug.com"><i data-feather="website"></i></a>
                 </div>
             </div>
         </div>
