--- a/login.html
+++ b/login.html
@@ -24,8 +24,8 @@
     <script type="text/babel">
         // --- SUPABASE SETUP ---
         // IMPORTANT: Replace with your actual Supabase Project URL and Anon Key
-        const supabaseUrl = 'SUPAURL'; 
-        const supabaseAnonKey = 'SUPABASEANONKEY';
+        const supabaseUrl = 'https://mrarxxudjfnmcfqhnjlm.supabase.co'; 
+        const supabaseAnonKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1yYXJ4eHVkamZubWNmcWhuamxtIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTk4MTUxMDQsImV4cCI6MjA3NTM5MTEwNH0.mxQVU_Wsd_0_v604RCQMNimxJKFRMjVmazKXn_x5Qlw';
         
         const { createClient } = window.supabase;
         const supabase = createClient(supabaseUrl, supabaseAnonKey);
