--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <a href="#values">Values</a>
             <a href="#contact">Contact</a>
             <a href="#signup">Early Access</a>
+            <a href="#resume-reviewer">Review Resume Now</a>
         </div>
 
         <div class="nav-cta-group">
